Changing deprecated options to a proper ones