@@ -10,7 +10,7 @@ public class IsANumber extends TypeSafeMatcher<String> {
     @Override
     protected boolean matchesSafely(String item) {
         try {
-            new Double(item);
+            Double.valueOf(item);
         } catch (NumberFormatException nfe) {
             return false;
         }
